fix: full page on mobile exceeds screen width and few other mobile screen layout fixes.

--- a/frontend/styles/global.css
+++ b/frontend/styles/global.css
@@ -4,8 +4,9 @@
  * SPDX-FileCopyrightText: 2022 - 2025 Helmholtz Centre Potsdam - GFZ German Research Centre for Geosciences
  * SPDX-FileCopyrightText: 2022 Marc Hanisch (GFZ) <marc.hanisch@gfz-potsdam.de>
  * SPDX-FileCopyrightText: 2023 - 2025 Dusan Mijatovic (Netherlands eScience Center)
- * SPDX-FileCopyrightText: 2023 - 2025 Netherlands eScience Center
+ * SPDX-FileCopyrightText: 2023 - 2026 Netherlands eScience Center
  * SPDX-FileCopyrightText: 2025 Christian Meeßen (GFZ) <christian.meessen@gfz-potsdam.de>
+ * SPDX-FileCopyrightText: 2026 Dusan Mijatovic (NLEsc) <d.mijatovic@esciencecenter.nl>
  *
  * SPDX-License-Identifier: Apache-2.0
  */
@@ -107,11 +108,6 @@ html {
 
 body {
   font-size: 1rem;
-  /* minimal with to have logo,
-  add button, mobile menu and profile.
-  NOTE ! when changing this value we need to update
-  useDisableScrollLock hook in utils folder too.
-  */
   min-width: 30rem;
   /* fix jumping scrollbar */
   overflow: overlay;
